--- a/demo/source/static/about.styl
+++ b/demo/source/static/about.styl
@@ -1,3 +1,4 @@
+@import './vicanso'
 .aboutContainer
   margin-bottom 20px
   h3
@@ -9,5 +10,6 @@
     text-shadow 0 1px 0 #fff
   p
     margin-bottom 20px
+    inlineBlock()
     &.last
       margin-bottom 0
